--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meta-init",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "init plugin for meta",
   "main": "index.js",
   "bin": {
@@ -29,10 +29,6 @@
   },
   "homepage": "https://github.com/mateodelnorte/meta-init#readme",
   "dependencies": {
-    "chalk": "^1.1.3",
-    "commander": "^2.9.0",
-    "debug": "^2.3.3",
-    "loop-things": "0.0.21",
-    "meta-exec": "0.0.0"
+    "debug": "^2.3.3"
   }
 }
