--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   },
   "devDependencies": {
     "commitizen": "^3.0.5",
-    "cz-conventional-changelog": "^2.1.0"
+    "cz-conventional-changelog": "^2.1.0",
+    "semantic-release": "^15.12.4",
+    "travis-deploy-once": "^5.0.9"
   }
 }
