--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "scripts": {
     "test": "echo \"No tests.\"",
-    "commit": "git-cz",
-    "semantic-release": "semantic-release",
-    "travis-deploy-once": "travis-deploy-once"
+    "commit": "git-cz"
   },
   "repository": {
     "type": "git",
@@ -44,8 +42,6 @@
   },
   "devDependencies": {
     "commitizen": "^3.0.5",
-    "cz-conventional-changelog": "^2.1.0",
-    "semantic-release": "^15.12.4",
-    "travis-deploy-once": "^5.0.9"
+    "cz-conventional-changelog": "^2.1.0"
   }
 }
