chore: standardizing test structure with jest, code linting, and commit message linting.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,23 @@
 language: node_js
 node_js:
-  - 8
   - 10
-  - 11
+  - 12
 
 notifications:
   email: false
 
+before_install:
+  - npm install -g codecov
+script:
+  - npm test
+  - codecov
+
+branches:
+  except:
+    - '/^v\d+\.\d+\.\d+$/'
+
 jobs:
   include:
-    - stage: test
-      before_install:
-        - npm install -g codecov greenkeeper-lockfile
-      before_script: greenkeeper-lockfile-update
-      script:
-        - npm run test
-        - codecov
-      after_script: greenkeeper-lockfile-upload
     - stage: deploy
       if: branch == master && !fork
       node_js: node # pre-installed version
