--- a/package.json
+++ b/package.json
@@ -7,8 +7,16 @@
     "meta-init": "./bin/meta-init"
   },
   "scripts": {
-    "test": "echo \"No tests.\"",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "lint": "prettier --write \"bin/*\" index.js",
+    "test": "jest --config jest.json --coverage",
+    "test:coverage": "jest --config jest.json --coverage",
+    "test:watch": "jest --config jest.json --watch"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "repository": {
     "type": "git",
@@ -41,7 +49,13 @@
     "inquirer": "^6.0.0"
   },
   "devDependencies": {
-    "commitizen": "3.0.7",
-    "cz-conventional-changelog": "2.1.0"
+    "@commitlint/cli": "^8.0.0",
+    "@commitlint/config-conventional": "^8.0.0",
+    "commitizen": "^3.0.7",
+    "cz-conventional-changelog": "^2.1.0",
+    "husky": "^2.4.0",
+    "jest": "^24.8.0",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.0"
   }
 }
