--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
   },
   "homepage": "https://github.com/mateodelnorte/meta-init#readme",
   "dependencies": {
-    "async": "^3.0.0",
-    "debug": "^4.0.0",
-    "get-meta-file": "^1.0.0",
-    "git-remote-origin-url": "^3.0.0",
-    "inquirer": "^6.0.0"
+    "async": "3.0.0",
+    "debug": "4.0.0",
+    "get-meta-file": "1.0.0",
+    "git-remote-origin-url": "3.0.0",
+    "inquirer": "6.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "8.0.0",
